build: rename to FJGL and change build logic